re-introduce the internal viewer